--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch app/main.ts",
-    "test": "codecrafters test"
+    "test": "bun test"
   },
   "dependencies": {
     "async": "^3.2.0"
   },
   "devDependencies": {
     "@types/bun": "^1.1.3",
-    "@types/node": "^20.12.11"
+    "@types/node": "^20.12.11",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^7.0.0"
   }
 }
